# mcp-google-gmail

./: .gitignore  README.md  gemini_system_prompt.md  pyproject.toml
.github/workflows/: release.yml
src/mcp_gmail/: server.py
src/mcp_google_gmail/: server.py
